--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,7 +9,10 @@ lifecycleRuntimeKtx = "2.6.1"
 activityCompose = "1.7.0"
 composeBom = "2023.08.00"
 hiltVersion = "2.49"
-hiltNavigationCompose = "1.1.0"
+hiltNavigationCompose = "1.2.0"
+ktorVersion = "2.3.9"
+lifecycleVersion = "2.6.2"
+ksp = "1.9.0-1.0.13"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -29,8 +32,22 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltVersion" }
 hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
+hilt-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hiltVersion"}
+
+ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktorVersion"}
+ktor-client-android = { module = "io.ktor:ktor-client-android", version.ref = "ktorVersion"}
+ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktorVersion"}
+ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktorVersion"}
+ktor-logging = { module = "io.ktor:ktor-client-logging", version = "2.3.2" }
+
+viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycleVersion"}
+viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycleVersion"}
+
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 jetbrainsKotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+pluginSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+kspTool = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+hiltGradlePlugin = { id = "com.google.dagger.hilt.android", version.ref = "hiltVersion" }
 
